--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,5 +3,8 @@ layout: default
 ---
 
 <div class="home">
-  <img src="assets/img/jlo-ben-spring-league-meme.jpeg" alt="Image">
+  {% for post in site.posts %}
+    <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+    <p>{{ post.excerpt }}</p>
+  {% endfor %}
 </div>
