--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
   <link rel="icon" href="/assets/img/favicon.png" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon.png">
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/custom.css" | relative_url }}">
   {%- feed_meta -%}
