--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,8 +3,22 @@ layout: default
 ---
 
 <div class="home">
-  {% for post in site.posts %}
-    <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-    <p>{{ post.excerpt }}</p>
-  {% endfor %}
+  {%- if site.posts.size > 0 -%}
+    <ul class="post-list">
+      {%- for post in site.posts -%}
+      <li>
+        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+        <h3>
+          <a class="post-link" href="{{ post.url | relative_url }}">
+            {{ post.title | escape }}
+          </a>
+        </h3>
+        <div class="post-meta">{{ post.date | date: date_format }}</div>
+
+        {{ post.content }}
+      </li>
+      {%- endfor -%}
+    </ul>
+  {%- endif -%}
+
 </div>
