--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,7 @@
 
   {%- include head.html -%}
 
-  <body>
-
+  <body class="{{ page.body_class | default: "default" }}">
     {%- include header.html -%}
 
     <main class="page-content" aria-label="Content">
