--- a/assets/custom.css
+++ b/assets/custom.css
@@ -46,8 +46,31 @@
 .percentage {
   width: 2%;
 }
+.inline-checkmark {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 1em;
+  height: 1em;
+  background-color: green;
+  color: white;
+  border-radius: 50%;
+  font-size: 0.8em;
+  font-weight: bold;
+  line-height: 1;
+  vertical-align: middle;
+}
+.inline-checkmark:before {
+  content: '✓';
+  font-size: 0.7em;
+  line-height: 1;
+}
 
 /* responsive */
+.standings-page .wrapper {
+  max-width: -webkit-calc(1200px -(30px* 2));
+  max-width: calc(1200px - 30px* 2);
+}
 .mobile {
   display: none;
 }
@@ -84,6 +107,9 @@
   }
   .schedule .location {
     white-space: nowrap;
+  }
+  .match-scores {
+    font-size: 0.8rem;
   }
 }
 
