Tweak responsive styles for standings

--- a/_includes/week_results.html
+++ b/_includes/week_results.html
@@ -35,7 +35,7 @@
       {% endif %}
     {% endfor %}
 
-    <h4>
+    <h4 class="match-header">
       {% if away_score > home_score %}
         <span class="inline-checkmark"></span> {{ away_team }}
       {% else %}
